--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             ● Founder of 
                             <a href="https://www.thejugaadpress.com/">The Jugaad Press</a>
                             <br/>
-                             ● I made the hardest decision of my life: 4 years ago, when I left my home at the age of 18 to come to the US with just $100 in my pocket. Despite being a first generation kid and my Dad making merely $9K/year.
+                             ● I made the hardest decision of my life: back in 2018, when I left my home at the age of 18 to come to the US with just $100 in my pocket. Despite being a first generation kid and my Dad making merely $9K/year.
                              <br/>
                              ● Worked with 6 different startups so far as a Software Engineer as well as a Product Manager (one of which also got acquired); started my own crypto startup; worked as the 15th employee for a YC startup & now working as a Product Manager.
                             <br/>
