--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                             <br/>
                              ● I made the hardest decision of my life: back in 2018, when I left my home at the age of 18 to come to the US with just $100 in my pocket. Despite being a first generation kid and my Dad making merely $9K/year.
                              <br/>
-                             ● Worked with 6 different startups so far as a Software Engineer as well as a Product Manager (one of which also got acquired); started my own crypto startup; worked as the 15th employee for a YC startup & now working as a Product Manager.
+                             ● Worked with 6 different startups so far as a Software Engineer as well as a Product Manager; started my own crypto startup; worked as the 15th employee for a YC startup & now working as a Product Manager.
                             <br/>
-                             ● Received 155K+ scholarship throughout my Bachelors and additional 20K in grants.					
+                             ● Received 155K+ in scholarship throughout my undergrad and additional 20K in grants.					
                             <br/>
                             ● Studied CS at Ohio Wesleyan
                             					
