--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                             <div class="inner">
                                 <h1 id="text01">Parampreet Singh</h1>
                                 <p id="text09">Creatorpreneur &amp; Product Manager</p>
+                                <p><a href="vc.html">Here's Why I Want To Get Involve In VC</a></p>
                             </div>
                         </div>
                     </div>
