--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h3 id="text04">
                         <span class="p">
                             ● Founder of 
-                            <a href="https://www.thejugaadpress.com/">The Jugaad Press </a>
+                            <a href="https://thejugaadpress.com/">The Jugaad Press </a>
                             <br/>
                              ● I made the hardest decision of my life: back in 2018, when I left my home at the age of 18 to come to the US with just $100 in my pocket. Despite being a first generation kid and my Dad making merely $9K/year.
                              <br/>
